fix cookieList collection
Signed-off-by: Ceki Gulcu <ceki@qos.ch>